// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@atlaskit/icon Glyph should match snapshot 1`] = `
<span
  aria-label="test-label"
  class="_1e0c1o8l _1o9zidpf _vyfuvuon _vwz4kb7n _1szv15vq _1tly15vq _rzyw1osq _17jb1osq _1ksvoz0e _3se1x1jp _re2rglyw _1veoyfq0 _1kg81r31 _jcxd1r8n _gq0g1onz _1trkwc43"
  data-vc="icon-undefined"
  role="img"
  style="--icon-primary-color: currentColor;"
>
  <svg
    height="24"
    role="presentation"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M13 11V3.993A.997.997 0 0 0 12 3c-.556 0-1 .445-1 .993V11H3.993A.997.997 0 0 0 3 12c0 .557.445 1 .993 1H11v7.007c0 .548.448.993 1 .993.556 0 1-.445 1-.993V13h7.007A.997.997 0 0 0 21 12c0-.556-.445-1-.993-1z"
      fill="currentcolor"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`@atlaskit/icon Icon should match the DOM Snapshot 1`] = `
<span
  aria-label="My icon"
  class="_1e0c1o8l _1o9zidpf _vyfuvuon _vwz4kb7n _1szv15vq _1tly15vq _rzyw1osq _17jb1osq _1ksvoz0e _3se1x1jp _re2rglyw _1veoyfq0 _1kg81r31 _jcxd1r8n _gq0g1onz _1trkwc43"
  data-vc="icon-undefined"
  role="img"
  style="--icon-primary-color: currentColor;"
>
  <svg
    role="presentation"
  >
    Icon
  </svg>
</span>
`;

exports[`Glyph should match snapshot 1`] = `
<span
  aria-label="test-label"
  class="_1e0c1o8l _vchhusvi _1o9zidpf _vwz4kb7n _y4ti1igz _bozg1mb9 _12va1onz _jcxd1r8n"
  role="img"
  style="color: currentColor;"
>
  <style
    data-cmpld="true"
  >
    ._1reo15vq{overflow-x:hidden}._18m915vq{overflow-y:hidden}._syaz1r31{color:currentColor}._lcxvglyw{pointer-events:none}._s7n4yfq0{vertical-align:bottom}._vc881r31 stop{stop-color:currentColor}._1bsbutpp{width:var(--ds-space-150,9pt)}._4t3iutpp{height:var(--ds-space-150,9pt)}._1bsbpxbi{width:var(--ds-space-200,1pc)}._4t3ipxbi{height:var(--ds-space-200,1pc)}._1bsb1ejb{width:var(--ds-space-300,24px)}._4t3i1ejb{height:var(--ds-space-300,24px)}
  </style>
  <svg
    class="_1reo15vq _18m915vq _syaz1r31 _lcxvglyw _s7n4yfq0 _vc881r31 _1bsbpxbi _4t3ipxbi"
    fill="none"
    role="presentation"
    viewBox="0 0 16 16"
  >
    <path
      clip-rule="evenodd"
      d="M7.25 8.75V15h1.5V8.75H15v-1.5H8.75V1h-1.5v6.25H1v1.5z"
      fill="currentcolor"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;
